--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "norch-crawlers",
-  "version": "0.0.1",
-  "description": "A NodeJS crawler library for creating general crawlers, mainly for search engines.",
+  "version": "0.0.2",
+  "description": "A NodeJS crawler library to quick and easy build versatile crawlers.",
   "main": "lib/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
