--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "daq-proc": "5.0.0",
     "fs-extra": "9.0.1",
     "fast-xml-parser": "3.17.4",
-    "he": "1.2.0"
+    "he": "1.2.0",
+    "snyk": "^1.388.0"
   },
   "devDependencies": {
     "standard": "^14.3.4",
